<resources>
    <string name="app_name">SquareGame(CONNECTED)</string>
    <string name="the_object_of_the_game_is_to_form_a_square_by_joining_four_dots_when_a_player_draws_a_line_that_closes_a_square_she_writes_her_initials_inside_the_square_and_gets_a_bonus_turn_when_all_possible_lines_have_been_drawn_the_player_with_the_most_initialed_squares_is_the_winner">The object of the game is to form a square by joining four dots. When a player draws a line that closes a square, she writes her initials inside the square and gets a bonus turn. When all possible lines have been drawn, the player with the most initialed squares is the winner.</string>
    <string name="objective">Objective</string>
    <string name="guide">Guide</string>
    <string name="congratulations">CONGRATULATIONS !!!</string>
    <string name="details">DETAILS</string>
    <string name="step_by_step" />
    <string name="steps_by_steps">STEPS BY STEPS</string>
    <string name="player_1">Player 1</string>
    <string name="start_game">START GAME</string>
    <string name="player_2">Player 2</string>
    <string name="local">LOCAL</string>
    <string name="replay">REPLAY</string>
    <string name="home">HOME</string>
    <string name="apply">APPLY</string>
    <string name="player_1_text">PLAYER 1</string>
    <string name="step_1_picture">step_1_picture</string>
    <string name="each_user_will_play_by_turns_to_complete_a_square">Each user will take turn to complete a square on a 3x3 grid size. Player completes a square will score 1 point and gets a bonus turn. Completing all squares in the grid, who has a higher score will win the game.</string>
    <string name="each_user_will_take_turn_to_complete_a_square_on_a_3x3_grid_size">Each user will take turn to complete a square on a 3x3 grid size.</string>
    <string name="player_completes_a_square_will_score_1_point_and_gets_a_bonus_turn">Player completes a square will score 1 point and gets a bonus turn.</string>
    <string name="completing_all_squares_in_the_grid_who_has_a_higher_score_will_win_the_game">Completing all squares in the grid, who has a higher score will win the game.</string>
    <string name="it_s_that_easy">It\'s that easy!!</string>
    <string name="pick_your_color">Pick your color</string>
    <string name="you_are_the_winner">YOU ARE THE WINNER</string>


    <string-array name="colors">
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="grid">
        <item>3 X 3 </item>
        <item>4 X 4 </item>
        <item>5 X 5 </item>
    </string-array>

</resources>
